feat: initial commit

--- a/profile.html
+++ b/profile.html
@@ -41,7 +41,7 @@
       <!-- Logo -->
       <div class="p-6">
         <div class="flex items-center justify-center">
-          <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+          <img src="/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
           <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
         </div>
       </div>
@@ -65,7 +65,7 @@
                 <span class="text-sm font-medium">Invest In</span>
               </a>
               <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
-                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                <span class="text-sm font-medium">Time Deposits</span>
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                <span class="text-sm font-medium">Membership Plans</span>
               </a>
               <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
@@ -85,7 +85,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                 <span class="font-medium text-sm font-medium">Profile</span>
               </a>
-              <a href="https://www.capirocket.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="https://www.tcentralfx.vip/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                 <span class="text-sm font-medium">Help & Support</span>
               </a>
@@ -111,7 +111,7 @@
         <!-- Logo -->
         <div class="p-6">
           <div class="flex items-center justify-center">
-            <img src="/public/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
+            <img src="/logo.webp" alt="tCentralFX VIP Logo" class="h-16 w-auto">
           <span class="text-sm font-bold text-[#009296] italic -ml-2" style="font-style: italic;">VIP</span>
           </div>
         </div>
@@ -135,7 +135,7 @@
                   <span class="text-sm font-medium">Invest In</span>
                 </a>
                 <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
-                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                  <span class="text-sm font-medium">Time Deposits</span>
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                  <span class="text-sm font-medium">Membership Plans</span>
                 </a>
                 <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
@@ -155,7 +155,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                   <span class="font-medium text-sm font-medium">Profile</span>
                 </a>
-                <a href="https://www.capirocket.net/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="https://www.tcentralfx.vip/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                   <span class="text-sm font-medium">Help & Support</span>
                 </a>
