--- a/register.html
+++ b/register.html
@@ -67,7 +67,7 @@
     <div class="w-full max-w-lg">
       <!-- Logo -->
       <div class="flex justify-center items-center mb-0">
-        <img src="/public/logo.webp" alt="tCentralFXvip Logo" class="h-44 w-auto">
+        <img src="/logo.webp" alt="tCentralFX VIP Logo" class="h-24 w-auto">
         <span class="text-2xl font-bold text-[#009296] italic -ml-5" style="font-style: italic;">VIP</span>
       </div>
 
