feat: initial commit

--- a/forgot-password.html
+++ b/forgot-password.html
@@ -125,7 +125,7 @@
         <div class="mt-8 text-center">
           <p class="text-gray-600">
             Remember your password? 
-            <a href="login.html" class="font-medium text-[#009296] hover:text-[#007a7e]">Log In</a>
+            <a href="/login" class="font-medium text-[#009296] hover:text-[#007a7e]">Log In</a>
           </p>
         </div>
       </div>
