--- a/dashboard.html
+++ b/dashboard.html
@@ -63,27 +63,27 @@
           <div>
             <h3 class="text-xs font-semibold text-gray-600 uppercase tracking-wider mb-4 px-3">General</h3>
             <nav class="space-y-2">
-              <a href="dashboard.html" class="flex items-center gap-3 px-3 py-2.5 text-[#009296] bg-gray-100 rounded-lg border-l-4 border-[#009296]">
+              <a href="/dashboard" class="flex items-center gap-3 px-3 py-2.5 text-[#009296] bg-gray-100 rounded-lg border-l-4 border-[#009296]">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="7" height="9" x="3" y="3" rx="1"/><rect width="7" height="5" x="14" y="3" rx="1"/><rect width="7" height="9" x="14" y="12" rx="1"/><rect width="7" height="5" x="3" y="16" rx="1"/></svg>
                 <span class="font-medium text-sm">Overview</span>
               </a>
-              <a href="deposit.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="/deposit" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg>
                 <span class="text-sm font-medium">Deposit</span>
               </a>
-              <a href="buy-crypto.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="/buy-crypto" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M3 9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2"/><path d="M3 11h3c.8 0 1.6.3 2.1.9l1.1.9c1.6 1.6 4.1 1.6 5.7 0l1.1-.9c.5-.5 1.3-.9 2.1-.9H21"/></svg>
                 <span class="text-sm font-medium">Invest In</span>
               </a>
-              <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="/locked-savings" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                
                 <span class="text-sm font-medium">Membership Plans</span>
               </a>
-              <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="/withdrawal" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
                 <span class="text-sm font-medium">Withdrawal</span>
               </a>
-              <a href="transaction-history.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="/transaction-history" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M12 7v5l4 2"/></svg>
                 <span class="text-sm font-medium">Transactions</span>
               </a>
@@ -93,7 +93,7 @@
           <div>
             <h3 class="text-xs font-semibold text-gray-600 uppercase tracking-wider mb-4 px-3">Other</h3>
             <nav class="space-y-2">
-              <a href="profile.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="/profile" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                 <span class="text-sm font-medium">Profile</span>
               </a>
@@ -134,27 +134,27 @@
             <div>
               <h3 class="text-xs font-semibold text-gray-600 uppercase tracking-wider mb-4 px-3">General</h3>
               <nav class="space-y-2">
-                <a href="dashboard.html" class="flex items-center gap-3 px-3 py-2.5 text-[#009296] bg-gray-100 rounded-lg border-l-4 border-[#009296]">
+                <a href="/dashboard" class="flex items-center gap-3 px-3 py-2.5 text-[#009296] bg-gray-100 rounded-lg border-l-4 border-[#009296]">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="7" height="9" x="3" y="3" rx="1"/><rect width="7" height="5" x="14" y="3" rx="1"/><rect width="7" height="9" x="14" y="12" rx="1"/><rect width="7" height="5" x="3" y="16" rx="1"/></svg>
                   <span class="font-medium text-sm">Overview</span>
                 </a>
-                <a href="deposit.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="/deposit" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><line x1="12" y1="8" x2="12" y2="16"/><line x1="8" y1="12" x2="16" y2="12"/></svg>
                   <span class="text-sm font-medium">Deposit</span>
                 </a>
-                <a href="buy-crypto.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="/buy-crypto" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><rect width="18" height="18" x="3" y="3" rx="2"/><path d="M3 9a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2"/><path d="M3 11h3c.8 0 1.6.3 2.1.9l1.1.9c1.6 1.6 4.1 1.6 5.7 0l1.1-.9c.5-.5 1.3-.9 2.1-.9H21"/></svg>
                   <span class="text-sm font-medium">Invest In</span>
                 </a>
-                <a href="locked-savings.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="/locked-savings" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M11 17h3v2a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1v-3a3.16 3.16 0 0 0 2-2h1a1 1 0 0 0 1-1v-2a1 1 0 0 0-1-1h-1a5 5 0 0 0-2-4V3a4 4 0 0 0-3.2 1.6l-.3.4H11a6 6 0 0 0-6 6v1a5 5 0 0 0 2 4v3a1 1 0 0 0 1 1h2a1 1 0 0 0 1-1z"/><path d="M16 10h.01"/><path d="M2 8v1a2 2 0 0 0 2 2h1"/></svg>                 
                    <span class="text-sm font-medium">Membership Plans</span>
                 </a>
-                <a href="withdrawal.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="/withdrawal" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="m22 2-7 20-4-9-9-4Z"/><path d="M22 2 11 13"/></svg>
                   <span class="text-sm font-medium">Withdrawal</span>
                 </a>
-                <a href="transaction-history.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="/transaction-history" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><path d="M3 12a9 9 0 1 0 9-9 9.75 9.75 0 0 0-6.74 2.74L3 8"/><path d="M3 3v5h5"/><path d="M12 7v5l4 2"/></svg>
                   <span class="text-sm font-medium">Transactions</span>
                 </a>
@@ -164,7 +164,7 @@
             <div>
               <h3 class="text-xs font-semibold text-gray-600 uppercase tracking-wider mb-4 px-3">Other</h3>
               <nav class="space-y-2">
-                <a href="profile.html" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="/profile" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                   <span class="text-sm font-medium">Profile</span>
                 </a>
@@ -291,7 +291,7 @@
               <div class="bg-white border border-gray-200 rounded-2xl p-6 lg:p-8 shadow-sm">
                 <div class="flex items-center justify-between mb-6">
                   <h2 class="text-xl font-semibold text-gray-900">Recent Transactions</h2>
-                  <a href="transaction-history.html" class="text-sm text-[#009296] hover:text-blue-300">View all</a>
+                  <a href="/transaction-history" class="text-sm text-[#009296] hover:text-blue-300">View all</a>
                 </div>
                 
                 <!-- Desktop Table -->
