--- a/login.html
+++ b/login.html
@@ -61,7 +61,7 @@
   <div class="min-h-screen flex items-center justify-center p-4">
     <div class="max-w-md w-full">
       <div class="flex justify-center items-center mb-0">
-        <img src="/logo.webp" alt="tCentralFX VIP Logo" class="h-24 w-auto">
+        <img src="/logo.webp" alt="tCentralFX VIP Logo" class="h-20 w-auto">
         <span class="text-2xl font-bold text-[#009296] italic -ml-5" style="font-style: italic;">VIP</span>
       </div>
       
@@ -85,7 +85,7 @@
             <div>
               <div class="flex items-center justify-between mb-2">
                 <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
-                <a href="forgot-password.html" class="text-sm text-[#009296] hover:text-[#007a7e] transition-colors">Forgot Password?</a>
+                <a href="/forgot-password" class="text-sm text-[#009296] hover:text-[#007a7e] transition-colors">Forgot Password?</a>
               </div>
               <div class="input-group">
                 <svg class="input-icon w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"><rect width="18" height="11" x="3" y="11" rx="2" ry="2"/><path d="M7 11V7a5 5 0 0 1 10 0v4"/></svg>
@@ -145,7 +145,7 @@
         <div class="mt-8 text-center">
           <p class="text-gray-600">
             Don't have an account? 
-            <a href="register.html" class="font-medium text-[#009296] hover:text-[#007a7e]">Sign Up</a>
+            <a href="/register" class="font-medium text-[#009296] hover:text-[#007a7e]">Sign Up</a>
           </p>
         </div>
       </div>
