--- a/register.html
+++ b/register.html
@@ -67,7 +67,7 @@
     <div class="w-full max-w-lg">
       <!-- Logo -->
       <div class="flex justify-center items-center mb-0">
-        <img src="/logo.webp" alt="tCentralFX VIP Logo" class="h-24 w-auto">
+        <img src="/logo.webp" alt="tCentralFX VIP Logo" class="h-20 w-auto">
         <span class="text-2xl font-bold text-[#009296] italic -ml-5" style="font-style: italic;">VIP</span>
       </div>
 
@@ -466,7 +466,7 @@
         <div class="mt-8 text-center">
           <p class="text-gray-600">
             Already have an account? 
-            <a href="login.html" class="font-medium text-[#009296] hover:text-[#007a7e]">Log In</a>
+            <a href="/login" class="font-medium text-[#009296] hover:text-[#007a7e]">Log In</a>
           </p>
         </div>
       </div>
