--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>tCentralFXvip</title>
   <link rel="stylesheet" href="/src/styles/input.css">
-  <meta http-equiv="refresh" content="0; url=/login.html" />
+  <meta http-equiv="refresh" content="0; url=/login" />
 </head>
 <body>
   <p>Loading...</p>
