--- a/buy-crypto.html
+++ b/buy-crypto.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tCentralFX VIP - Buy Cryptos</title>
+  <title>TradingCentralFX VIP - Buy Cryptos</title>
   <script type="module" src="/src/js/main.js"></script>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
