--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tCentralFX VIP</title>
+  <title>TradingCentralFX VIP</title>
   <link rel="stylesheet" href="/src/styles/input.css">
   <meta http-equiv="refresh" content="0; url=/login" />
 </head>
