--- a/locked-savings.html
+++ b/locked-savings.html
@@ -4,7 +4,7 @@
   
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>tCentralFX VIP - Time Deposits</title>
+  <title>TradingCentralFX VIP - Time Deposits</title>
   <link rel="stylesheet" href="/src/styles/input.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
