feat: initial commit

--- a/locked-savings.html
+++ b/locked-savings.html
@@ -562,7 +562,7 @@
             </div>
             <div class="flex justify-between">
               <span class="text-sm font-medium text-gray-600">Maturity Amount:</span>
-              <span id="fd-maturity-amount" class="text-sm font-medium font-medium text-gray-900">$5,255.00</span>
+              <span id="fd-maturity-amount" class="text-sm font-medium font-medium text-green-600">$5,255.00</span>
             </div>
           </div>
           <button id="close-success" class="w-full bg-[#009296] text-white py-3 px-4 rounded-md hover:bg-[#007a7e] transition-colors font-medium">
