feat: initial commit

--- a/profile.html
+++ b/profile.html
@@ -8,6 +8,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600;700&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/toastify-js/src/toastify.min.css">
   <style>
     body {
       font-family: 'Inter', -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', sans-serif;
@@ -28,6 +29,12 @@
       html {
         font-size: 14px;
       }
+    }
+    .toast-error {
+      background: linear-gradient(to right, #e74c3c, #c0392b) !important;
+    }
+    .toast-success {
+      background: linear-gradient(to right, #00b09b, #96c93d) !important;
     }
   </style>
 </head>
