--- a/deposit.html
+++ b/deposit.html
@@ -96,7 +96,7 @@
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                 <span class="text-sm font-medium">Profile</span>
               </a>
-              <a href="https://www.tradecenfxvip.com/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+              <a href="https://www.tcfxvip.com/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                 <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                 <span class="text-sm font-medium">Help & Support</span>
               </a>
@@ -166,7 +166,7 @@
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><circle cx="12" cy="8" r="4"/><path d="M4.22 18.22a8 8 0 0 1 15.56 0"/></svg>
                   <span class="text-sm font-medium">Profile</span>
                 </a>
-                <a href="https://www.tradecenfxvip.com/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
+                <a href="https://www.tcfxvip.com/contact.html" target="_blank" class="flex items-center gap-3 px-3 py-2.5 text-gray-900 hover:bg-gray-100 rounded-lg">
                   <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="w-4 h-4"><circle cx="12" cy="12" r="10"/><path d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"/><path d="M12 17h.01"/></svg>
                   <span class="text-sm font-medium">Help & Support</span>
                 </a>
